Create Game -> Choose a Game

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </ul>
             <ul class="uk-switcher uk-margin-medium">
                 <li>
-                    <button class="uk-button uk-button-primary uk-border-rounded" uk-toggle="target: #game-chooser">Create Game</button>
+                    <button class="uk-button uk-button-primary uk-border-rounded" uk-toggle="target: #game-chooser">Choose a Game</button>
                     <ul uk-tab class="uk-margin-medium">
                         <li class="uk-active"><a href="">Active</a></li>
                         <li><a href="#">Created</a></li>
