Clean up game display classes.

--- a/index.html
+++ b/index.html
@@ -231,57 +231,57 @@
                     </div>
                     <div id="game-grid" class="uk-child-width-1-2@s uk-child-width-1-3@m uk-text-center uk-flex-center uk-grid-match" uk-filter="target: .games" uk-grid>
                         <div data-feel="0 1 3" data-time="0 2 3" data-size="0 1">
-                            <div class="uk-card uk-card-default uk-card-body uk-border-rounded">
-                                <div class="uk-text-large uk-text-left">Long Walks on the Beach</div>
-                                <p class="uk-text-left">Use word association to figure out your team identity.</p>
+                            <div class="uk-card uk-card-default uk-card-body uk-border-rounded uk-text-left">
+                                <h3 class="uk-card-title">Long Walks on the Beach</h3>
+                                <p>Use word association to figure out your team identity.</p>
                             </div>
                         </div>
                         <div data-feel="0 1 2" data-time="0 3 4" data-size="0 1 2 3">
-                            <div class="uk-card uk-card-default uk-card-body uk-border-rounded">
-                                <div class="uk-text-large uk-text-left">The Ascent</div>
-                                <p class="uk-text-left">Combine clues from ten smaller puzzles to reveal the key to the master puzzle.</p>
+                            <div class="uk-card uk-card-default uk-card-body uk-border-rounded uk-text-left">
+                                <h3 class="uk-card-title">The Ascent</h3>
+                                <p>Combine clues from ten smaller puzzles to reveal the key to the master puzzle.</p>
                             </div>
                         </div>
                         <div data-feel="0 2 3" data-time="0 1 2" data-size="0 1 2 3">
-                            <div class="uk-card uk-card-default uk-card-body uk-border-rounded">
-                                <div class="uk-text-large uk-text-left">The Ascent (Rapid)</div>
-                                <p class="uk-text-left">Combine clues from five smaller puzzles to reveal the key to the master puzzle.</p>
+                            <div class="uk-card uk-card-default uk-card-body uk-border-rounded uk-text-left">
+                                <h3 class="uk-card-title">The Ascent (Rapid)</h3>
+                                <p>Combine clues from five smaller puzzles to reveal the key to the master puzzle.</p>
                             </div>
                         </div>
                         <div data-feel="0 2 4" data-time="0 3 4" data-size="0 1 2 3">
-                            <div class="uk-card uk-card-default uk-card-body uk-border-rounded">
-                                <div class="uk-text-large uk-text-left">The Hunt</div>
-                                <p class="uk-text-left">Locate the master puzzle by combining clues from seven smaller puzzles.</p>
+                            <div class="uk-card uk-card-default uk-card-body uk-border-rounded uk-text-left">
+                                <h3 class="uk-card-title">The Hunt</h3>
+                                <p>Locate the master puzzle by combining clues from seven smaller puzzles.</p>
                             </div>
                         </div>
                         <div data-feel="0 1 2" data-time="0 3 4" data-size="0 1 2 3">
-                            <div class="uk-card uk-card-default uk-card-body uk-border-rounded">
-                                <div class="uk-text-large uk-text-left">The Puzzle</div>
-                                <p class="uk-text-left">Combine clues from ten smaller puzzles to reveal the key to the master puzzle.</p>
+                            <div class="uk-card uk-card-default uk-card-body uk-border-rounded uk-text-left">
+                                <h3 class="uk-card-title">The Puzzle</h3>
+                                <p>Combine clues from ten smaller puzzles to reveal the key to the master puzzle.</p>
                             </div>
                         </div>
                         <div data-feel="0 1 3" data-time="0 3 4" data-size="0 1 2 3">
-                            <div class="uk-card uk-card-default uk-card-body uk-border-rounded">
-                                <div class="uk-text-large uk-text-left">The Puzzle LITE</div>
-                                <p class="uk-text-left">Combine clues from ten smaller puzzles to reveal the key to the master puzzle.</p>
+                            <div class="uk-card uk-card-default uk-card-body uk-border-rounded uk-text-left">
+                                <h3 class="uk-card-title">The Puzzle LITE</h3>
+                                <p>Combine clues from ten smaller puzzles to reveal the key to the master puzzle.</p>
                             </div>
                         </div>
                         <div data-feel="0 2" data-time="0 3 4" data-size="0 1 2 3">
                             <div class="uk-card uk-card-default uk-card-body uk-border-rounded">
-                                <div class="uk-text-large uk-text-left">The Puzzle PRO</div>
-                                <p class="uk-text-left">Combine clues from ten smaller puzzles to reveal the key to the master puzzle.</p>
+                                <h3 class="uk-card-title">The Puzzle PRO</h3>
+                                <p>Combine clues from ten smaller puzzles to reveal the key to the master puzzle.</p>
                             </div>
                         </div>
                         <div data-feel="0 1 3" data-time="0 3 4" data-size="0 1 2 3">
-                            <div class="uk-card uk-card-default uk-card-body uk-border-rounded">
-                                <div class="uk-text-large uk-text-left">The Riddle</div>
-                                <p class="uk-text-left">Combine clues from ten smaller puzzles to reveal the key to the riddle.</p>
+                            <div class="uk-card uk-card-default uk-card-body uk-border-rounded uk-text-left">
+                                <h3 class="uk-card-title">The Riddle</h3>
+                                <p>Combine clues from ten smaller puzzles to reveal the key to the riddle.</p>
                             </div>
                         </div>
                         <div data-feel="0 1 4" data-time="0 3 4" data-size="0 1 2 3">
-                            <div class="uk-card uk-card-default uk-card-body uk-border-rounded">
-                                <div class="uk-text-large uk-text-left">The Trip</div>
-                                <p class="uk-text-left">Combine clues from ten smaller puzzles to reveal the key to the master puzzle.</p>
+                            <div class="uk-card uk-card-default uk-card-body uk-border-rounded uk-text-left">
+                                <h3 class="uk-card-title">The Trip</h3>
+                                <p>Combine clues from ten smaller puzzles to reveal the key to the master puzzle.</p>
                             </div>
                         </div>
                     </div>
