--- a/index.html
+++ b/index.html
@@ -229,59 +229,77 @@
                             <button class="uk-button uk-button-primary uk-border-rounded" type="submit" onclick="chooseGame_resetFilterOptions()" uk-filter-control>Clear Filter</button>
                         </div>
                     </div>
-                    <div id="game-grid" class="uk-child-width-1-2@s uk-child-width-1-3@m uk-text-center uk-flex-center uk-grid-match" uk-filter="target: .games" uk-grid>
+                    <div id="game-grid" class="uk-child-width-1-2@s uk-child-width-1-3@m uk-text-center uk-flex-center uk-grid-match uk-height-match" uk-filter="target: .games" uk-grid>
                         <div data-feel="0 1 3" data-time="0 2 3" data-size="0 1">
-                            <div class="uk-card uk-card-default uk-card-body uk-border-rounded uk-text-left">
-                                <h3 class="uk-card-title">Long Walks on the Beach</h3>
-                                <p>Use word association to figure out your team identity.</p>
+                            <div class="uk-card uk-card-default uk-card-body uk-card-small uk-border-rounded uk-text-left uk-background-cover" data-src="res/games/long-walks-on-the-beach.jpg" uk-img>
+                                <div class="uk-background-default uk-padding-small uk-border-rounded">
+                                    <h3 class="uk-card-title">Long Walks on the Beach</h3>
+                                    <p>Use word association to figure out your team identity.</p>
+                                </div>
                             </div>
                         </div>
                         <div data-feel="0 1 2" data-time="0 3 4" data-size="0 1 2 3">
-                            <div class="uk-card uk-card-default uk-card-body uk-border-rounded uk-text-left">
-                                <h3 class="uk-card-title">The Ascent</h3>
-                                <p>Combine clues from ten smaller puzzles to reveal the key to the master puzzle.</p>
+                            <div class="uk-card uk-card-default uk-card-body uk-card-small uk-border-rounded uk-text-left uk-background-cover" data-src="res/games/the-ascent.png" uk-img>
+                                <div class="uk-background-default uk-padding-small uk-border-rounded">
+                                    <h3 class="uk-card-title">The Ascent</h3>
+                                    <p>Combine clues from ten smaller puzzles to reveal the key to the master puzzle.</p>
+                                </div>
                             </div>
                         </div>
                         <div data-feel="0 2 3" data-time="0 1 2" data-size="0 1 2 3">
-                            <div class="uk-card uk-card-default uk-card-body uk-border-rounded uk-text-left">
-                                <h3 class="uk-card-title">The Ascent (Rapid)</h3>
-                                <p>Combine clues from five smaller puzzles to reveal the key to the master puzzle.</p>
+                            <div class="uk-card uk-card-default uk-card-body uk-card-small uk-border-rounded uk-text-left uk-background-cover" data-src="res/games/the-ascent.png" uk-img>
+                                <div class="uk-background-default uk-padding-small uk-border-rounded">
+                                    <h3 class="uk-card-title">The Ascent (Rapid)</h3>
+                                    <p>Combine clues from five smaller puzzles to reveal the key to the master puzzle.</p>
+                                </div>
                             </div>
                         </div>
                         <div data-feel="0 2 4" data-time="0 3 4" data-size="0 1 2 3">
-                            <div class="uk-card uk-card-default uk-card-body uk-border-rounded uk-text-left">
-                                <h3 class="uk-card-title">The Hunt</h3>
-                                <p>Locate the master puzzle by combining clues from seven smaller puzzles.</p>
+                            <div class="uk-card uk-card-default uk-card-body uk-card-small uk-border-rounded uk-text-left uk-background-cover" data-src="res/games/the-hunt.png" uk-img>
+                                <div class="uk-background-default uk-padding-small uk-border-rounded">
+                                    <h3 class="uk-card-title">The Hunt</h3>
+                                    <p>Locate the master puzzle by combining clues from seven smaller puzzles.</p>
+                                </div>
                             </div>
                         </div>
                         <div data-feel="0 1 2" data-time="0 3 4" data-size="0 1 2 3">
-                            <div class="uk-card uk-card-default uk-card-body uk-border-rounded uk-text-left">
-                                <h3 class="uk-card-title">The Puzzle</h3>
-                                <p>Combine clues from ten smaller puzzles to reveal the key to the master puzzle.</p>
+                            <div class="uk-card uk-card-default uk-card-body uk-card-small uk-border-rounded uk-text-left uk-background-cover" data-src="res/games/the-puzzle.jpg" uk-img>
+                                <div class="uk-background-default uk-padding-small uk-border-rounded">
+                                    <h3 class="uk-card-title">The Puzzle</h3>
+                                    <p>Combine clues from ten smaller puzzles to reveal the key to the master puzzle.</p>
+                                </div>
                             </div>
                         </div>
                         <div data-feel="0 1 3" data-time="0 3 4" data-size="0 1 2 3">
-                            <div class="uk-card uk-card-default uk-card-body uk-border-rounded uk-text-left">
-                                <h3 class="uk-card-title">The Puzzle LITE</h3>
-                                <p>Combine clues from ten smaller puzzles to reveal the key to the master puzzle.</p>
+                            <div class="uk-card uk-card-default uk-card-body uk-card-small uk-border-rounded uk-text-left uk-background-cover" data-src="res/games/the-puzzle.jpg" uk-img>
+                                <div class="uk-background-default uk-padding-small uk-border-rounded">
+                                    <h3 class="uk-card-title">The Puzzle LITE</h3>
+                                    <p>Combine clues from ten smaller puzzles to reveal the key to the master puzzle.</p>
+                                </div>
                             </div>
                         </div>
                         <div data-feel="0 2" data-time="0 3 4" data-size="0 1 2 3">
-                            <div class="uk-card uk-card-default uk-card-body uk-border-rounded">
-                                <h3 class="uk-card-title">The Puzzle PRO</h3>
-                                <p>Combine clues from ten smaller puzzles to reveal the key to the master puzzle.</p>
+                            <div class="uk-card uk-card-default uk-card-body uk-card-small uk-border-rounded uk-text-left uk-background-cover" data-src="res/games/the-puzzle.jpg" uk-img>
+                                <div class="uk-background-default uk-padding-small uk-border-rounded">
+                                    <h3 class="uk-card-title">The Puzzle PRO</h3>
+                                    <p>Combine clues from ten smaller puzzles to reveal the key to the master puzzle.</p>
+                                </div>
                             </div>
                         </div>
                         <div data-feel="0 1 3" data-time="0 3 4" data-size="0 1 2 3">
-                            <div class="uk-card uk-card-default uk-card-body uk-border-rounded uk-text-left">
-                                <h3 class="uk-card-title">The Riddle</h3>
-                                <p>Combine clues from ten smaller puzzles to reveal the key to the riddle.</p>
+                            <div class="uk-card uk-card-default uk-card-body uk-card-small uk-border-rounded uk-text-left uk-background-cover" data-src="res/games/the-riddle.png" uk-img>
+                                <div class="uk-background-default uk-padding-small uk-border-rounded">
+                                    <h3 class="uk-card-title">The Riddle</h3>
+                                    <p>Combine clues from ten smaller puzzles to reveal the key to the riddle.</p>
+                                </div>
                             </div>
                         </div>
                         <div data-feel="0 1 4" data-time="0 3 4" data-size="0 1 2 3">
-                            <div class="uk-card uk-card-default uk-card-body uk-border-rounded uk-text-left">
-                                <h3 class="uk-card-title">The Trip</h3>
-                                <p>Combine clues from ten smaller puzzles to reveal the key to the master puzzle.</p>
+                            <div class="uk-card uk-card-default uk-card-body uk-card-small uk-border-rounded uk-text-left uk-background-cover" data-src="res/games/the-trip.jpg" uk-img>
+                                <div class="uk-background-default uk-padding-small uk-border-rounded">
+                                    <h3 class="uk-card-title">The Trip</h3>
+                                    <p>Combine clues from ten smaller puzzles to reveal the key to the master puzzle.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
