--- a/index.html
+++ b/index.html
@@ -230,83 +230,98 @@
                         </div>
                     </div>
                     <div id="game-grid" class="uk-child-width-1-2@s uk-child-width-1-3@m uk-text-center uk-flex-center uk-grid-match uk-height-match" uk-filter="target: .games" uk-grid>
-                        <div data-feel="0 1 3" data-time="0 2 3" data-size="0 1">
+                        <a href="#game-details" onclick="chooseGame_details(this)" data-id="0" data-feel="0 1 3" data-time="0 2 3" data-size="0 1" uk-toggle>
                             <div class="uk-card uk-card-default uk-card-body uk-card-small uk-card-hover uk-border-rounded uk-text-left uk-background-cover" data-src="res/games/long-walks-on-the-beach.jpg" uk-img>
                                 <div class="uk-background-default uk-padding-small uk-border-rounded">
                                     <h3 class="uk-card-title">Long Walks on the Beach</h3>
                                     <p>Use word association to figure out your team identity.</p>
                                 </div>
                             </div>
-                        </div>
-                        <div data-feel="0 1 2" data-time="0 3 4" data-size="0 1 2 3">
+                        </a>
+                        <a href="#game-details" onclick="chooseGame_details(this)" data-id="1" data-feel="0 1 2" data-time="0 3 4" data-size="0 1 2 3" uk-toggle>
                             <div class="uk-card uk-card-default uk-card-body uk-card-small uk-card-hover uk-border-rounded uk-text-left uk-background-cover" data-src="res/games/the-ascent.png" uk-img>
                                 <div class="uk-background-default uk-padding-small uk-border-rounded">
                                     <h3 class="uk-card-title">The Ascent</h3>
                                     <p>Combine clues from ten smaller puzzles to reveal the key to the master puzzle.</p>
                                 </div>
                             </div>
-                        </div>
-                        <div data-feel="0 2 3" data-time="0 1 2" data-size="0 1 2 3">
+                        </a>
+                        <a href="#game-details" onclick="chooseGame_details(this)" data-id="2" data-feel="0 2 3" data-time="0 1 2" data-size="0 1 2 3" uk-toggle>
                             <div class="uk-card uk-card-default uk-card-body uk-card-small uk-card-hover uk-border-rounded uk-text-left uk-background-cover" data-src="res/games/the-ascent.png" uk-img>
                                 <div class="uk-background-default uk-padding-small uk-border-rounded">
                                     <h3 class="uk-card-title">The Ascent (Rapid)</h3>
                                     <p>Combine clues from five smaller puzzles to reveal the key to the master puzzle.</p>
                                 </div>
                             </div>
-                        </div>
-                        <div data-feel="0 2 4" data-time="0 3 4" data-size="0 1 2 3">
+                        </a>
+                        <a href="#game-details" onclick="chooseGame_details(this)" data-id="3" data-feel="0 2 4" data-time="0 3 4" data-size="0 1 2 3" uk-toggle>
                             <div class="uk-card uk-card-default uk-card-body uk-card-small uk-card-hover uk-border-rounded uk-text-left uk-background-cover" data-src="res/games/the-hunt.png" uk-img>
                                 <div class="uk-background-default uk-padding-small uk-border-rounded">
                                     <h3 class="uk-card-title">The Hunt</h3>
                                     <p>Locate the master puzzle by combining clues from seven smaller puzzles.</p>
                                 </div>
                             </div>
-                        </div>
-                        <div data-feel="0 1 2" data-time="0 3 4" data-size="0 1 2 3">
+                        </a>
+                        <a href="#game-details" onclick="chooseGame_details(this)" data-id="4" data-feel="0 1 2" data-time="0 3 4" data-size="0 1 2 3" uk-toggle>
                             <div class="uk-card uk-card-default uk-card-body uk-card-small uk-card-hover uk-border-rounded uk-text-left uk-background-cover" data-src="res/games/the-puzzle.jpg" uk-img>
                                 <div class="uk-background-default uk-padding-small uk-border-rounded">
                                     <h3 class="uk-card-title">The Puzzle</h3>
                                     <p>Combine clues from ten smaller puzzles to reveal the key to the master puzzle.</p>
                                 </div>
                             </div>
-                        </div>
-                        <div data-feel="0 1 3" data-time="0 3 4" data-size="0 1 2 3">
+                        </a>
+                        <a href="#game-details" onclick="chooseGame_details(this)" data-id="5" data-feel="0 1 3" data-time="0 3 4" data-size="0 1 2 3" uk-toggle>
                             <div class="uk-card uk-card-default uk-card-body uk-card-small uk-card-hover uk-border-rounded uk-text-left uk-background-cover" data-src="res/games/the-puzzle.jpg" uk-img>
                                 <div class="uk-background-default uk-padding-small uk-border-rounded">
                                     <h3 class="uk-card-title">The Puzzle LITE</h3>
                                     <p>Combine clues from ten smaller puzzles to reveal the key to the master puzzle.</p>
                                 </div>
                             </div>
-                        </div>
-                        <div data-feel="0 2" data-time="0 3 4" data-size="0 1 2 3">
+                        </a>
+                        <a href="#game-details" onclick="chooseGame_details(this)" data-id="6" data-feel="0 2" data-time="0 3 4" data-size="0 1 2 3" uk-toggle>
                             <div class="uk-card uk-card-default uk-card-body uk-card-small uk-card-hover uk-border-rounded uk-text-left uk-background-cover" data-src="res/games/the-puzzle.jpg" uk-img>
                                 <div class="uk-background-default uk-padding-small uk-border-rounded">
                                     <h3 class="uk-card-title">The Puzzle PRO</h3>
                                     <p>Combine clues from ten smaller puzzles to reveal the key to the master puzzle.</p>
                                 </div>
                             </div>
-                        </div>
-                        <div data-feel="0 1 3" data-time="0 3 4" data-size="0 1 2 3">
+                        </a>
+                        <a href="#game-details" onclick="chooseGame_details(this)" data-id="7" data-feel="0 1 3" data-time="0 3 4" data-size="0 1 2 3" uk-toggle>
                             <div class="uk-card uk-card-default uk-card-body uk-card-small uk-card-hover uk-border-rounded uk-text-left uk-background-cover" data-src="res/games/the-riddle.png" uk-img>
                                 <div class="uk-background-default uk-padding-small uk-border-rounded">
                                     <h3 class="uk-card-title">The Riddle</h3>
                                     <p>Combine clues from ten smaller puzzles to reveal the key to the riddle.</p>
                                 </div>
                             </div>
-                        </div>
-                        <div data-feel="0 1 4" data-time="0 3 4" data-size="0 1 2 3">
+                        </a>
+                        <a href="#game-details" onclick="chooseGame_details(this)" data-id="8" data-feel="0 1 4" data-time="0 3 4" data-size="0 1 2 3" uk-toggle>
                             <div class="uk-card uk-card-default uk-card-body uk-card-small uk-card-hover uk-border-rounded uk-text-left uk-background-cover" data-src="res/games/the-trip.jpg" uk-img>
                                 <div class="uk-background-default uk-padding-small uk-border-rounded">
                                     <h3 class="uk-card-title">The Trip</h3>
                                     <p>Combine clues from ten smaller puzzles to reveal the key to the master puzzle.</p>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
             <div class="uk-modal-footer uk-text-right">
                 <button class="uk-button uk-button-default uk-modal-close uk-border-rounded" type="button">Cancel</button>
+                <!-- <button class="uk-button uk-button-primary uk-border-rounded" type="button">Create Game</button> -->
+            </div>
+        </div>
+    </div>
+
+    <div id="game-details" class="uk-flex-top" uk-modal>
+        <div class="uk-modal-dialog uk-margin-auto-vertical">
+            <div class="uk-modal-header">
+                <h1 class="uk-modal-title"></h1>
+            </div>
+            <div class="uk-modal-body uk-background-cover" data-src="" uk-img uk-overflow-auto >
+                <p class="uk-card uk-card-default uk-card-body uk-card-small uk-border-rounded"></p>
+            </div>
+            <div class="uk-modal-footer uk-text-right">
+                <a href="#game-chooser" class="uk-button uk-button-default uk-border-rounded" uk-toggle>Cancel</a>
                 <button class="uk-button uk-button-primary uk-border-rounded" type="button">Create Game</button>
             </div>
         </div>
@@ -397,7 +412,32 @@
             chooseGame_manuallyClearFilter();
             chooseGame_resetFilterOptions();
             
-        })
+        });
+
+        let gameDescriptions = [
+            /* Long Walks on the Beach */ 'A get-to-know you game with 5 activities involving collaboration, communication and problem solving. A game without competition or fixed answers, it helps to strengthen personal relationships within teams.',
+            /* The Ascent */ 'A problem solving game with 10 puzzles and a master problem. Themed around things that go up - the master problem reveals an amazing human achievement.',
+            /* The Ascent (Rapid) */ 'A short-form problem solving game with 5 puzzles and a master problem. Themed around things that go up - the master problem reveals an amazing human achievement.',
+            /* The Hunt */ 'A problem solving game and online hunt with 10 puzzles and a master problem. The theme is “things you search for” and solving the master problem is the ultimate reveal! ',
+            /* The Puzzle */ 'A problem solving game with 10 puzzles and a master problem. Teams need to piece answers together and think laterally to solve this playfully themed game.',
+            /* The Puzzle LITE */ 'An easier version of The Puzzle with 10 puzzles and a master problem. Teams need to piece answers together and think laterally to solve this playfully themed game.',
+            /* The Puzzle PRO */ 'A harder version of The Puzzle suitable for high performers- with 10 puzzles and a master problem. Teams need to piece answers together and think laterally to solve this playfully themed game. ',
+            /* The Riddle */ 'A riddle-based problem solving game with 10 individual puzzles and a master problem. The answers give clues which lead teams to a well known story.',
+            /* The Trip */ 'An exploration and travel-themed problem solving game with 10 puzzles and a master problem. The answers reveal a famous and beautiful location.',
+        ]
+
+        function chooseGame_details(gameCard) {
+
+            let imgSrc = gameCard.querySelector('.uk-card').dataset.src;
+            let title = gameCard.querySelector('h3').textContent;
+            let description = gameDescriptions[gameCard.dataset.id];
+
+            let modal = document.querySelector('#game-details');
+            modal.querySelector('.uk-modal-body').dataset.src = imgSrc;
+            modal.querySelector('h1').textContent = title;
+            modal.querySelector('p').textContent = description;
+
+        };
 
         function chooseGame_textFilter() {
 
